// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column renders a column 1`] = `
<div
  className="column"
/>
`;

exports[`Column renders a column with boolean props 1`] = `
<div
  className="column small-centered"
/>
`;

exports[`Column renders a column with boolean props 2`] = `
<div
  className="column small-uncentered"
/>
`;

exports[`Column renders a column with boolean props 3`] = `
<div
  className="column medium-centered"
/>
`;

exports[`Column renders a column with boolean props 4`] = `
<div
  className="column medium-uncentered"
/>
`;

exports[`Column renders a column with boolean props 5`] = `
<div
  className="column large-centered"
/>
`;

exports[`Column renders a column with boolean props 6`] = `
<div
  className="column large-uncentered"
/>
`;

exports[`Column renders a column with boolean props 7`] = `
<div
  className="column xlarge-centered"
/>
`;

exports[`Column renders a column with boolean props 8`] = `
<div
  className="column xlarge-uncentered"
/>
`;

exports[`Column renders a column with breakpoints 1`] = `
<div
  className="column small-1"
/>
`;

exports[`Column renders a column with breakpoints 2`] = `
<div
  className="column medium-1"
/>
`;

exports[`Column renders a column with breakpoints 3`] = `
<div
  className="column large-1"
/>
`;

exports[`Column renders a column with breakpoints 4`] = `
<div
  className="column xlarge-1"
/>
`;

exports[`Column renders a column with numeric props 1`] = `
<div
  className="column small-pull-1"
/>
`;

exports[`Column renders a column with numeric props 2`] = `
<div
  className="column small-push-1"
/>
`;

exports[`Column renders a column with numeric props 3`] = `
<div
  className="column small-offset-1"
/>
`;

exports[`Column renders a column with numeric props 4`] = `
<div
  className="column medium-pull-1"
/>
`;

exports[`Column renders a column with numeric props 5`] = `
<div
  className="column medium-push-1"
/>
`;

exports[`Column renders a column with numeric props 6`] = `
<div
  className="column medium-offset-1"
/>
`;

exports[`Column renders a column with numeric props 7`] = `
<div
  className="column large-pull-1"
/>
`;

exports[`Column renders a column with numeric props 8`] = `
<div
  className="column large-push-1"
/>
`;

exports[`Column renders a column with numeric props 9`] = `
<div
  className="column large-offset-1"
/>
`;

exports[`Column renders a column with numeric props 10`] = `
<div
  className="column xlarge-pull-1"
/>
`;

exports[`Column renders a column with numeric props 11`] = `
<div
  className="column xlarge-push-1"
/>
`;

exports[`Column renders a column with numeric props 12`] = `
<div
  className="column xlarge-offset-1"
/>
`;
